assets/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

html,body {
    width: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
}

body {
    font-family: "Quicksand", sans-serif;
}

h2 {
    text-transform: uppercase;
}


/* --------------------------------------Colours Section */

.btn {
    color: #FAFAFA;
    background-color: #FF8970;
    border: none;
}

.btn:active {
    -webkit-box-shadow: none;
            box-shadow: none;
}

/* --------------------------------------Nav Section */

.navbar {
    padding: 10px 50px;
    background-color: #FAFAFA;
}

.nav-item-list {
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
    font-size: 1.05rem;
    text-transform: uppercase;
}
.nav-item a:hover {
    color: #FF8970 !important;
}

.navbar-brand {
    font-size: 1.7rem;
    font-weight: 600;
}


/* --------------------------------------Jumbotron Section */
.jumbotron-section {
    height: 80vh;
    background: url('../images/jumbo-13.jpg') no-repeat fixed;
    background-size: cover;
    background-position: bottom;
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    
}

.jumbotron-content {
    background-color: transparent;
    margin-top: 2rem;
    -ms-flex-line-pack: center;
        align-content: center;
    
}

.jumbotron-content h1 {
    font-size: 4rem;
}

.jumbotron-button {
    margin-top: 30px;
}

/* --------------------------------------About Section */

.about-section {
    margin: 100px;
}

.about-section h2 {
    padding-bottom: 30px;
}

.about-section p {
    padding-bottom: 30px;
}

.about-button {
    margin: 30px;
}

/* --------------------------------------Images Section */

.images-container {
    width: auto;
    padding: 0;
}

.images-container img{
    height: 100%;
    width: 100%;
}

/* -------------------------------------------Location */

.location-container {
    margin-top: 50px;
    margin-bottom: 100px
}

.location-map {
    width: auto;
}

.location-map img{
    height: 100%;
    width: 100%;
}


/* ------------------------------------------Contact Page */

.contact-section {
    margin: 100px 75px;
}

.contact-section h2 {
    padding-bottom: 30px;
}

.contact-section p {
    padding-bottom: 25px;
}

.form-container {
    padding-bottom: 100px;
}


/* ------------------------------------------Find a Class Page */

.findaclass-section {
    margin: 100px 75px;
}

.findaclass-section h2 {
    padding-bottom: 30px;
}

/* ------------------------------------------Footer Section */

footer {
    background-color: #fafafa;
    margin-top: 100px;
}

.social-links li a i {
    font-size: 20px;
    text-decoration: none;
    color: #FF8970;
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
}

.social-links li a i:hover {
    color: #212529;
}

/* -------------------------------------------Media Queries */
 
@media (max-width: 991px) {
    .nav-item-list {
        -webkit-box-pack: end;
            -ms-flex-pack: end;
        text-align: center;
        text-transform: uppercase;
        font-size: 1.25rem;
        padding-top: 50px;
        padding-bottom: 50px;
    }
    
    .nav-item-list li {
        -webkit-box-pack: end;
            -ms-flex-pack: end;
        text-align: center;
        text-transform: uppercase;
        padding-top: 5px;
        padding-bottom: 5px;
    }

    .jumbotron-section {
        height: 100vh;
        background: url('../images/mobile-13.jpg') no-repeat;
        background-size: cover;
        background-position: center;
        width: 100%;
    }

    .jumbotron-section h1 {  
        font-size: 40px;
    }

    .jumbotron-button {  
        margin-top: 10px;
    }

@media (max-width: 575px) {
    .jumbotron-section {
        height: 90vh;
        background: url('../images/mobile-13.jpg') no-repeat;
        background-size: cover;
        background-position: bottom;
        width: 100%;
        padding-right: 5%;
        padding-left: 5%;
    }

    .jumbotron-section h1 {  
        font-size: 40px;
    }

    .about-section {
        margin: 70px 20px;
    }

    .about-section h2 {
        padding-top: 30px;
        padding-bottom: 20px;
        margin: 0;
    }

    .about-section p {
        margin: 0px;
        padding-top: 20px;
        padding-bottom: 20px; 
    }

    .contact-section  {
        margin: 70px 20px;
    }

    .form-container {
        margin: 60px 20px;
    }

    .findaclass-section  {
        margin: 70px 20px;
    }

    .table-container {
        margin-left: 2px;
        margin-right: 2px;
        -webkit-box-align: center;
            -ms-flex-align: center;
                align-items: center;
    }

    .table-column {
        padding: 0;
    }

    .table-row {
        margin-left: 0;
        margin-right: 0;
    }

    .location-text {
        margin: 10px 5px 30px 5px;
    }
}

@media (max-width: 320px) {
    .navbar-brand {
        font-size: 1.5rem;
    }
    
     .jumbotron-container h1 {  
        font-size: 30px;
    }

    .table-container {
        margin-left: 1px;
        margin-right: 1px;
        -webkit-box-align: center;
            -ms-flex-align: center;
        align-items: center;
        font-size: 75%;
    }
}
}

